--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,9 +7,115 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MESSAGEME</title>
 </head>
+<style>
+    :root{
+        --shadow:0 4px 6px -1px rgba(0,0,0,0.1),0 2px 4px -1px rgba(0,0,0,0.06);
+    }
+    * {
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+    }
+
+    .parent {
+        background-color: rgba(232,233,239,1);
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+    }
+
+    .child {
+        display: flex;
+        background-color: white;
+        height: 50vh;
+        width: 40%;
+        border-radius: 10px;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin: 100px;
+        box-shadow: var(--shadow);
+    }
+
+    form {
+        width: 80%;
+    }
+
+    input {
+        padding: 10px;
+        border: 1px solid dodgerblue;
+        width: 100%;
+        margin: 10px;
+        border-radius: 5px;
+    }
+
+    input:focus{
+        border-color: rgba(75, 95, 172, 1);
+        outline: none;
+    }
+
+    button {
+        background-color:rgba(75, 95, 172, 1);
+        padding: 10px;
+        color: white;
+        border: none;
+        font-weight: 600;
+        border-radius: 5px;
+        width: 100px;
+        cursor: pointer;
+        transition: ease-in 0.2s;
+    }
+
+    button:hover{
+        background-color: rgb(108, 127, 201);
+    }
+
+    .chat-img{
+        height: 80px;
+        padding-bottom: 10px;
+        width: auto;
+    }
+
+        /* 2xl */
+     @media (max-width: 1536px) {}
+     /* xl */
+     @media (max-width: 1280px) {}
+     /* lg */
+     @media (max-width: 992px) {
+        .child{
+            width: 60%;
+        }
+     }
+     /* md */
+     @media (max-width: 768px) {
+        .child{
+            width: 80%;
+            margin: 15px;
+        }
+     }
+     /* sm */
+     @media (max-width: 640px) {
+        .child{
+            width: 80%;
+            margin: 10px;
+        }
+     }
+     /* xs */
+     @media (max-width: 475px) {
+        .child{
+            width: 100%;
+            margin: 10px;
+        }
+     }
+
+
+</style>
 <body>
     <div class="parent">
         <div class="child">
+            <img class="chat-img" src="{% static 'images/chat-icon.png' %}" alt="">
             <h1 style="font-weight:900;">Enter Room</h1>
             <form action="" method="POST">
                 {% csrf_token %}
@@ -21,65 +128,5 @@
         </div>
     </div>
 </body>
-<style>
-    :root{
-        --shadow:0 4px 6px -1px rgba(0,0,0,0.1),0 2px 4px -1px rgba(0,0,0,0.06);
-    }
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
 
-.parent {
-    background-color: rgba(232,233,239,1);
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-}
-
-.child {
-    display: flex;
-    background-color: white;
-    height: 50vh;
-    width: 40%;
-    border-radius: 10px;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin: 100px;
-    box-shadow: var(--shadow);
-}
-
-form {
-    width: 80%;
-}
-
-input {
-    padding: 10px;
-    border: 1px solid dodgerblue;
-    width: 100%;
-    margin: 10px;
-    border-radius: 5px;
-}
-
-input:focus{
-    border-color: rgba(75, 95, 172, 1);
-    outline: none;
-}
-
-button {
-    background-color:rgba(75, 95, 172, 1);
-    padding: 10px;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    width: 20%;
-    cursor: pointer;
-}
-
-
-</style>
 </html>
