--- a/templates/message.html
+++ b/templates/message.html
@@ -12,19 +12,208 @@
     <!-- link to h=css file -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
+<style>
+
+    * {
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+        }
+    
+    
+        .parent {
+          background-color: white;
+        }
+    
+        nav {
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            background-color: #659DBD;
+            padding: 10px;
+        }
+    
+        nav ul li {
+            list-style: none;
+            display: inline-block;
+            padding: 10px;
+        }
+    
+        nav ul li:hover {
+            background-color: dodgerblue;
+            color: #fff;
+            transition: 0.8s;
+        }
+    
+        nav ul li a {
+            text-decoration: none;
+            color: #fff;
+        }
+    
+        .parent {
+            height: 100vh;
+            display: flex;
+            justify-content: center;           
+            align-items: center;
+            width: 100%;
+        }
+
+    
+        .profile-pic {
+            /* height: 80px; */
+            width: 15%;
+            
+            border-radius: 50px;
+            background-color: #fff;
+        }
+    
+        .profile-pic img {
+            width:100%;
+            height:100%;
+            border-radius: 50%;
+            object-fit: cover;
+        }
+    
+        .child-2 {
+            /* max-height: 100vh; */
+            width: 490px;
+            margin: 10px;
+            border-radius: 10px;
+            padding: 10px;
+            background-color: rgba(25,32,43,255);
+        }
+    
+        .chat-body-parent {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            /* height: 60vh; */
+        }
+    
+        .chat-body, .message {
+            /* max-height: 100vh; */
+            width: 100%;
+            background-color: rgba(25,32,43,255);
+            border-radius: 10px;
+            display: flex;      
+            padding: 10px;
+            flex-direction: column;
+        }
+    
+        .message {
+            max-height: 500px;  
+            overflow-y: auto;
+        }
+    
+        .chat-body .message .receive {
+            background-color: white;
+            max-width: 320px;
+            word-wrap: break-word;
+            word-spacing: normal;
+            border-radius: 10px;
+            padding: 10px;
+            margin-bottom: 10px;            
+            align-self: flex-start;
+        }
+        .chat-body .message .send{
+            background-color:rgb(156, 218, 179);
+            max-width: 320px;
+            border-radius: 10px;
+            padding: 10px;
+            word-wrap: break-word;
+            word-spacing: normal;
+            align-self: flex-end;
+            margin-bottom: 10px;
+        }
+
+    
+        form {
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+        }
+    
+        form textarea {
+            width: 100%;
+            height: 40px;
+            border-radius: 10px;
+            padding: 10px;
+            outline: none;
+            border: 0.3px solid dodgerblue;
+        }
+    
+        form textarea::-webkit-scrollbar{
+            display: none;
+        }
+
+        form button {
+            width: 25%;
+            padding: 10px;
+            background-color:#25D366;
+            border-radius: 5px;
+            border: none;
+            color: #000;
+        }
+        .message::-webkit-scrollbar{
+            width: 10px;
+        }
+
+        .message::-webkit-scrollbar-track{
+            background-color: transparent;
+        }
+        
+        .message::-webkit-scrollbar-thumb{
+            background-color:rgb(55, 59, 67);
+        }
+
+        .child-2 h3{
+            color: #25D366;
+        }
+
+        .sender-name{
+            color: white;
+            margin-bottom: 15px;
+        }
+        
+
+            /* 2xl */
+        @media (max-width: 1536px) {}
+
+        /* xl */
+        @media (max-width: 1280px) {}
+
+        /* lg */
+        @media (max-width: 1024px) {}
+
+        /* md */
+        @media (max-width: 768px) {}
+
+        /* sm */
+        @media (max-width: 640px) {
+            .message::-webkit-scrollbar{
+                display: none;
+            }
+    
+        }
+
+        /* xs */
+        @media (max-width: 475px) {}
+
+</style>
 <body>
     <div class="parent">
         <div class="child-2">
-            <center><h2>Chats</h2></center><hr>
+            <center><h3>Online</h3></center>
             <div class="chat-body-parent">
-                <div class="chat-body" id="tasks">
+                <div class="chat-body" >
                     <div class="message" id="chatContainer">
                       <!-- received messages and displayed here -->
                         {% for i in messages %}
                             {% if i.sender != user %}
                                 <div class="receive">
-                                    <p style="color: #000;"> {{i.message}}<strong>-{{i.sender}}</strong></p>
+                                    <p style="color: #000;"> {{i.message}}</p>                                    
                                 </div>
+                                <p class="sender-name">{{i.sender | capfirst }}</p>
                             {% else %}
                                 <div class="send">
                                     <p style="color: #000;">{{i.message}}</p>
@@ -38,7 +227,6 @@
                         <form action="" id="message-form" method="POST">
                             {% csrf_token %}
                             <textarea id="msg" cols="30" name="message" rows="10" placeholder="Enter your message" required></textarea>
-                            <button class="submit" type="submit">Send</button>
                         </form>    
                     </div>
                 </div>
@@ -47,6 +235,18 @@
     </div>
 </body>
 <script>
+    const form = document.getElementById('message-form');
+    const textArea = document.getElementById('msg');
+{% comment %} 
+    textArea.addEventListener('keydown',(e) => {
+        if(e.key === 'Enter' && !e.shiftKey){
+            e.preventDefault();
+            form.submit();
+        }
+    }) {% endcomment %}
+
+
+
     function scrollToBottom() {
         var chatContainer = document.getElementById("chatContainer");
         chatContainer.scrollTop = chatContainer.scrollHeight;
@@ -56,9 +256,15 @@
     const wsEndpoint = `${websocketProtocol}://${window.location.host}/ws/notification/{{room_name}}/`;
     const socket = new WebSocket(wsEndpoint);
 
-    document.getElementById('message-form').addEventListener('submit', function(event){
-        event.preventDefault();
+    {% comment %} document.getElementById('message-form').addEventListener('submit', function(event){
+        event.preventDefault(); {% endcomment %}
+        
+    textArea.addEventListener('keydown',(e) => {
+            if(e.key === 'Enter' && !e.shiftKey){
+                e.preventDefault();
+            
         const message = document.getElementById('msg').value;
+    
         socket.send(
             JSON.stringify({
                 'message': message,
@@ -66,6 +272,7 @@
                 'sender': '{{user}}',
             })
         )
+        }
     });
 
     // response from consumer on server
@@ -77,14 +284,14 @@
         var message = messageData['message'];
 
         // empty message input field after message has been sent
-        if (sender == {{user}}){
+        if (sender == "{{user}}"){
             document.getElementById('msg').value = '';
         }
 
         // Here's where we append the message to the chatbox.
         var messageDiv = document.querySelector('.message');
         if (sender != '{{user}}') { // assuming you have a variable `currentUser` to hold the current user's name
-            messageDiv.innerHTML += '<div class="receive"><p style="color: #000;">' + message + '<strong>-' + sender + '</strong></p></div>';
+            messageDiv.innerHTML += '<div class="receive"><p style="color:#000;">' + message + '</p></div> <p class="sender-name"> ' + sender  + '</p>';
         } else {
             messageDiv.innerHTML += '<div class="send"><p style="color: #000;">' + message + '</p></div>';
         }
@@ -92,202 +299,12 @@
 
     });
 
-    socket.onopen = (event) => {
-        console.log("WebSocket connection opened!");
-    };
+    window.onload = function(){
+        scrollToBottom();
+    }
 
-    socket.onclose = (event) => {
-        console.log("WebSocket connection closed!");
-    };
+
 
 </script>
-<style>
 
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    }
-
-
-    .parent {
-      background-color: #B1A296;
-    }
-
-    nav {
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        background-color: #659DBD;
-        padding: 10px;
-    }
-
-    nav ul li {
-        list-style: none;
-        display: inline-block;
-        padding: 10px;
-    }
-
-    nav ul li:hover {
-        background-color: dodgerblue;
-        color: #fff;
-        transition: 0.8s;
-    }
-
-    nav ul li a {
-        text-decoration: none;
-        color: #fff;
-    }
-
-    .parent {
-        height: 100vh;
-        display: flex;
-        justify-content: center;
-        /* background-image: url("/static/img/bck.jpg");  */
-       
-        background-position: center; 
-        background-repeat: no-repeat; 
-        background-size: cover; 
-        align-items: center;
-        width: 100%;
-    }
-
-    .child-1 {
-        /* height: 70vh; */
-        width: 30%;
-        margin: 10px;
-        border-radius: 10px;
-        
-        background-color: white;
-    }
-
-    .chat-room {
-        width: 100%;
-        /* max-height: ; */
-        border-radius: 10px;
-        display: flex;
-        align-items: center;
-        justify-content: space-around;
-        background-color: #fff;
-        border: 1px solid dodgerblue;
-    }
-
-    .profile-pic {
-        /* height: 80px; */
-        width: 15%;
-        
-        border-radius: 50px;
-        background-color: #fff;
-    }
-
-    .profile-pic img {
-        width:100%;
-        height:100%;
-        border-radius: 50%;
-        object-fit: cover;
-    }
-
-    .chat-room h3 {
-        color: #000;
-    }
-
-    .chat-room h3 {
-        background-color: gray;
-        padding: 10px;
-        border-radius: 5px;
-        text-decoration: none;
-    }
-
-    .chat-room h3 a {
-        text-decoration: none;
-        color: white;
-    }
-
-
-    .child-2 {
-        /* max-height: 100vh; */
-        width: 50%;
-        margin: 10px;
-        border-radius: 10px;
-        padding: 10px;
-        background-color: #FBEEC1;
-    }
-
-    .chat-body-parent {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        /* height: 60vh; */
-    }
-
-    .chat-body, .message {
-        /* max-height: 100vh; */
-        width: 100%;
-        background-color: #557A95;
-        border-radius: 10px;
-        display: flex;      
-        padding: 10px;
-        flex-direction: column;
-    }
-
-    .message {
-        max-height: 400px;  /* Or whatever height value you see fit */
-        overflow-y: auto;
-    }
-
-    .chat-body .message .receive, .send {
-        background-color: #B1A296;
-        max-width: 400px;
-       
-        border-radius: 10px;
-        padding: 10px;
-        margin-bottom: 10px;
-    }
-
-    .send:hover {
-        padding: 15px;
-        transition: 0.8s;
-    }
-
-    .receive:hover {
-        padding: 15px;
-        transition: 0.8s;
-    }
-
-    .chat-body .message .send {
-        align-self: flex-end;
-    }
-
-    .chat-body .message .receive {
-        align-self: flex-start;
-    }
-
-    form {
-        display: flex;
-        align-items: center;
-        justify-content: space-around;
-    }
-
-    form textarea {
-        width: 70%;
-        height: 40px;
-        border-radius: 10px;
-        padding: 10px;
-    }
-
-    form button {
-        width: 25%;
-        padding: 10px;
-        background-color: #FBEEC1;
-        border-radius: 5px;
-        border: none;
-        color: #000;
-    }
-    @media only screen and (max-width: 600px) {
-    .child-2 {
-        width: 100%;
-    }
-}
-
-</style>
 </html>
