--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,8 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MESSAGEME</title>
-</head>
+{% extends 'main.html' %}
+{% load static %} 
+{% block content %}
+
+
 <style>
     :root{
         --shadow:0 4px 6px -1px rgba(0,0,0,0.1),0 2px 4px -1px rgba(0,0,0,0.06);
@@ -24,6 +20,7 @@
         justify-content: center;
         align-items: center;
         width: 100%;
+        
     }
 
     .child {
@@ -112,7 +109,6 @@
 
 
 </style>
-<body>
     <div class="parent">
         <div class="child">
             <img class="chat-img" src="{% static 'images/chat-icon.png' %}" alt="">
@@ -127,6 +123,5 @@
             </form>
         </div>
     </div>
-</body>
 
-</html>
+    {% endblock content %}
