some UI updated

--- a/templates/main.html
+++ b/templates/main.html
@@ -42,7 +42,7 @@
 
 
     
-        .profile-pic {
+        {% comment %} .profile-pic {
             /* height: 80px; */
             width: 15%;
             
@@ -56,7 +56,7 @@
             border-radius: 50%;
             object-fit: cover;
         }
-    
+     {% endcomment %}
         
             /* 2xl */
         @media (max-width: 1536px) {}
