--- a/templates/message.html
+++ b/templates/message.html
@@ -156,11 +156,18 @@
         }
 
         .sender-name{
-            color: white;
-            margin-bottom: 15px;
+            color: black;
+            margin-bottom: 5px;
             font-size: 0.8em;
         }
         
+        .message img{
+            height: 30px;
+            width: 30px;
+            border-radius: 50%;
+            margin-right: 8px;
+            object-fit: cover;
+        }
 
             /* 2xl */
         @media (max-width: 1536px) {}
@@ -202,10 +209,15 @@
                       <!-- received messages and displayed here -->
                         {% for i in messages %}
                             {% if i.sender != user %}
+                            <span style="display: flex;align-items: end;">
+                                <img src="/media/i.sender.profile_picture" alt="">
                                 <div class="receive">
+                                    <p class="sender-name"> {{i.sender | capfirst }}</p>
                                     <p style="color: #000;"> {{i.message}}</p>                                    
                                 </div>
-                                <p class="sender-name"> @{{i.sender | capfirst }}</p>
+                            </span>
+
+                                {% comment %}  {% endcomment %}
                             {% else %}
                                 <div class="send">
                                     <p style="color: #000;">{{i.message}}</p>
@@ -254,7 +266,7 @@
             JSON.stringify({
                 'message': message,
                 'room_name': '{{room_name}}',
-                'sender': '{{user}}',
+                'sender': '{{ request.user.username }}',
             })
         )
         }
@@ -276,7 +288,7 @@
         // Here's where we append the message to the chatbox.
         var messageDiv = document.querySelector('.message');
         if (sender != '{{user}}') { // assuming you have a variable `currentUser` to hold the current user's name
-            messageDiv.innerHTML += '<div class="receive"><p style="color:#000;">' + message + '</p></div> <p class="sender-name"> ' + '@' + sender  + '</p>';
+            messageDiv.innerHTML += '<div class="receive"><p style="color:#000;">' + message + '</p></div> <p class="sender-name"> ' + sender  + '</p>';
         } else {
             messageDiv.innerHTML += '<div class="send"><p style="color: #000;">' + message + '</p></div>';
         }
