--- a/templates/loginpage.html
+++ b/templates/loginpage.html
@@ -7,6 +7,7 @@
     {% comment %} <link rel="stylesheet" href="style.css" /> {% endcomment %}
     <title>Login And Registration page</title>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
   </head>
   <body>
 
@@ -38,9 +39,10 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            flex-direction: column;
           }
           
-          input {
+          input ,.label-profile-pic{
             display: block;
             outline: none;
             padding: 15px 10px;
@@ -49,6 +51,19 @@
             background: none;
             color: black;
             width: 300px;
+            transition: border-color 1s;
+          }
+          
+          .label-profile-pic{
+            display: block;
+            outline: none;
+            padding: 15px 10px;
+            margin: 30px;
+            border: solid 1px dodgerblue;
+            background: none;
+            color: black;
+            width: 300px;
+            cursor: pointer;
             transition: border-color 1s;
           }
           
@@ -62,7 +77,7 @@
             color: white;
             background-color:rgba(75, 95, 172, 1);
             border: none;
-            width: 200px;
+            width: 300px;
             margin-left: 30px;
             transition: 0.2s;
             cursor: pointer;
@@ -120,6 +135,10 @@
             display: block;
             animation: show-page 1s;
           }
+
+          {% comment %} #reg_profile_picture{
+            display: none;
+          } {% endcomment %}
           
           @keyframes show-page {
             0% {
@@ -132,6 +151,9 @@
           
     </style>
     <div class="form">
+        {% for msg in messages %}
+        <p style="color: red;" id="showMessageError">* {{ msg }}</p>
+        {% endfor %}
       <form action="{% url 'loginpage' %}" method="post">
         {% csrf_token %}
         <div class="action">
@@ -143,7 +165,7 @@
           <input type="password" name="log_password" placeholder="Password" />
           <div class="log-reg">            
               <button type="submit">Login</button>
-              <a  onclick="openRegPage()">Register</a>
+              {% comment %} <a  onclick="openRegPage()">Register</a> {% endcomment %}
           </div>
         </div>
       </form>
@@ -152,11 +174,12 @@
           <div class="reg">
             <input type="text" name="reg_username" id="reg_username" placeholder="Username" />
             <input type="email" name="reg_email" id="reg_email" placeholder="Email" />
+            {% comment %} <label for="reg_profile_picture" class="label-profile-pic" ><i class="fa-solid fa-upload" style="padding-right: 5px;"></i>Profile Picure</label> {% endcomment %}
             <input type="file" name="reg_profile_picture" id="reg_profile_picture" placeholder="Profile Picture" />
             <input type="password" name="reg_password" id="reg_password" placeholder="Password" />
             <div class="log-reg">  
                 <button type="button" name="registration_btn" onclick="registrationBtn()">Register</button>
-                <a onclick="openLoginPage()">Login</a>
+                {% comment %} <a onclick="openLoginPage()">Login</a> {% endcomment %}
             </div>
           </div>
       </form>
@@ -168,6 +191,7 @@
     function registrationBtn(){
 
     const reg_username = document.getElementById("reg_username").value;
+    const showMessageError = document.getElementById("showMessageError");
     const reg_email = document.getElementById("reg_email").value;
     const reg_profile_picture = document.getElementById("reg_profile_picture").files[0];
     const reg_password = document.getElementById("reg_password").value;
@@ -190,6 +214,11 @@
         success:function(response){
           if (response.added){
             location.reload();
+          }
+          if(response.exists){
+            console.log("PPPPPPPPPPPPPPPPPPPPPPP")
+            console.log(response.message)
+            showMessageError.innerHTML =  response.message
           }
         },
         error:function(xhr,status,error){
