--- a/templates/message.html
+++ b/templates/message.html
@@ -200,14 +200,13 @@
         }
 
 </style>
-
     <div class="parent">
         <div class="child-2">
             <center><h3>Online</h3></center>
             <div class="chat-body-parent">
                 <div class="chat-body" >
                     <div class="message" id="chatContainer">
-                      <!-- received messages and displayed here -->
+
                         {% for i in messages %}
                             {% if i.sender.id != user %}
                             <span style="display: flex;align-items: end;">
@@ -225,7 +224,7 @@
                                 </div>
                             {% endif %}
                         {% endfor %}
-                    <!-- end receive messages -->
+
                     </div>
 
                     <div class="form">
@@ -267,32 +266,34 @@
             JSON.stringify({
                 'message': message,
                 'room_name': '{{room_name}}',
+                'profilePic':'{{ dp }}',
                 'sender': {
                     "id":'{{ request.user.id }}',
-                    "username":'{{ request.user.username }}'
+                    "username":'{{ request.user.username }}',
+                    "firstname":'{{ request.user.first_name }}'
                 },
             })
         )
         }
     });
 
-    // response from consumer on server
     socket.addEventListener("message", (event) => {
         const messageData = JSON.parse(event.data)['message'];
         console.log(messageData);
         
         var senderId = messageData['sender']['id'];
-        var senderUsername = messageData['sender']['username'];
+        var senderUsername = messageData['sender']['firstname'];
         var message = messageData['message'];
-        // empty message input field after message has been sent
         if (senderId == "{{ user }}"){
             document.getElementById('msg').value = '';
         }
 
-        // Here's where we append the message to the chatbox.
         var messageDiv = document.querySelector('.message');
-        if (senderId != '{{ user }}') { // assuming you have a variable `currentUser` to hold the current user's name
-            messageDiv.innerHTML += '<div class="receive"><p style="color:#000;">' + message + '</p></div> <p class="sender-name"> ' + senderUsername  + '</p>';
+        if (senderId != '{{ user }}') { 
+
+
+
+            messageDiv.innerHTML += '<span style="display: flex;align-items: end;"><img src="/media/{{ dp }}" alt=""><div class="receive"><p class="sender-name"> ' + senderUsername  + '</p><p style="color:#000;">' + message + '</p></div></span>';
         } else {
             messageDiv.innerHTML += '<div class="send"><p style="color: #000;">' + message + '</p></div>';
         }
