--- a/templates/profile.html
+++ b/templates/profile.html
@@ -106,6 +106,36 @@
         font-size: 1.6em;
         text-transform: uppercase;
       }
+
+      @media (max-width: 425px) {
+        .form {
+          min-height: 200px;
+          min-width: 300px;
+        }
+        .form button {
+          width: 200px;
+        }
+        input{
+          padding: 15px 10px;
+          margin: 6px;
+          border: solid 1px dodgerblue;
+          background: none;
+          color: black;
+          width: 260px;
+          transition: border-color 1s;
+        }
+        .show-profile{
+            padding: 15px 10px;
+            margin: 6px;
+            color: black;
+            width: 260px;
+            height: 190px;
+          }
+        .form button {
+          width: 260px;
+          margin: 6px;
+        }
+      }
       
 </style>
 
