updated login and register

--- a/templates/loginpage.html
+++ b/templates/loginpage.html
@@ -186,8 +186,8 @@
           <span class="load" onclick="openRegPage()" id="reg-action">Register</span>
         </div>
         <div class="login show-page">
-          <input type="text" name="log_username" placeholder="E-mail" />
-          <input type="password" name="log_password" placeholder="Password" />
+          <input type="text" name="log_username" placeholder="E-mail" required />
+          <input type="password" name="log_password" placeholder="Password" required/>
           <div class="log-reg">            
               <button type="submit">Login</button>
               {% comment %} <a  onclick="openRegPage()">Register</a> {% endcomment %}
