--- a/templates/profile.html
+++ b/templates/profile.html
@@ -124,7 +124,7 @@
           width: 260px;
           transition: border-color 1s;
         }
-        .show-profile{
+        .show-profile ,#uploadedImage{
             padding: 15px 10px;
             margin: 6px;
             color: black;
