--- a/templates/main.html
+++ b/templates/main.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <link rel="icon" type="image/png" href="../static/logo/Messageme.png">
+    <link rel="icon" type="image/png" href="{% static 'logo/Messageme.png' %}">
     <title>Messages</title>
     <!-- load static -->
     {% load static %}
@@ -158,7 +160,14 @@
             </div>
 
             <ul class="dropmenu">
-                <li class="user-name-menu"><a href="{% url 'profile' %}"><img src="{{ dp.url }}" alt=""></a><a href="{% url 'profile' %}">  {{ viewusername | capfirst }}</a>
+                <li class="user-name-menu"><a>
+                    {% if dp %}
+                        <img src="{{ dp.url }}" alt="">
+                    {% else %}
+                        <img src="/static/images/profile.png" alt="">
+                    {% endif %}
+                    
+                </a><a >  {{ viewusername | capfirst }}</a>
                     <div class="dropdown-menu">
                         <ul>
                             <li><a href="{% url 'profile' %}">Profile</a></li>
